--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -1,16 +1,17 @@
 {
   "game_created": "Game Created",
   "create_error": "You have already created a game, please cancel it or wait for autocancel!",
-  "create_button_join": "Join",
-  "create_button_start": "Start",
-  "create_button_cancel": "Cancel",
-  "create_button_leave": "Leave",
-  "create_button_new": "Create New Game",
   "game_created_autocancel": "Autocancel",
   "game_created_gameOwner": "Game Owner",
   "game_created_playerList": "Player List",
   "game_created_roles": "Roles:",
   "game_created_gameEndConditions": "Game End Conditions:",
+  "game_created_button_join": "ㅤㅤㅤJoinㅤㅤㅤ",
+  "game_created_button_start": "ㅤㅤStartㅤ",
+  "game_created_button_cancel": "ㅤㅤCancelㅤㅤ",
+  "game_created_button_leave": "ㅤㅤLeaveㅤㅤ",
+  "game_created_button_edit": "ㅤEditㅤ",
+  "game_created_button_new": "ㅤCreate New Gameㅤ",
   "cancel_content_message": "The game was canceled by its author!",
   "cancel_confirm_message": "The game was removed!",
   "auto_cancel_content_message": "The game was automatically canceled!",
@@ -65,9 +66,9 @@
   "role_embed_placeHolder_name": "Placeholder for action menu",
   "role_embed_delay_name": "Delay between actions",
   "condition_embed_condition_name": "Condition",
-  "condition_embed_embedTitle_name": "Embed Title",
-  "condition_embed_embedDescription_name": "Embed Description",
-  "condition_embed_winRole_name": "Win Role",
+  "condition_embed_embedTitle_name": "Title",
+  "condition_embed_embedDescription_name": "Description",
+  "condition_embed_winRole_name": "Winning Role",
 
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
@@ -95,5 +96,20 @@
   "profile_premium_notPurchased": "not purchased",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Custom",
-  "profile_button_news": "News Notifications"
+  "profile_button_news": "News Notifications",
+
+  "create_condition_title1": "Condition Creation",
+  "create_condition_conditionName_label": "Name",
+  "create_condition_conditionName_placeHolder": "My mafia victory condition",
+  "create_condition_title2": "Condition Creation: ",
+  "create_condition_condition_label": "Condition",
+  "create_condition_condition_placeHolder": "string",
+  "create_condition_embedTitle_label": "string",
+  "create_condition_embedTitle_placeHolder": "string",
+  "create_condition_embedDescription_label": "string",
+  "create_condition_embedDescription_placeHolder": "string",
+  "create_condition_embedThumbnail_label": "string",
+  "create_condition_embedThumbnail_placeHolder": "string",
+  "create_condition_winRole_label": "string",
+  "create_condition_winRole_placeHolder": "string"
 }
