--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -1,16 +1,17 @@
 {
   "game_created": "Игра создана",
   "create_error": "Вы уже создали одну игру, сначала отмените её или дождитесь автоотмены!",
-  "create_button_join": "Присоединиться",
-  "create_button_start": "Старт",
-  "create_button_cancel": "Отменить",
-  "create_button_leave": "Покинуть",
-  "create_button_new": "Создать новую игру",
   "game_created_autocancel": "Автоотмена",
   "game_created_gameOwner": "Владелец игры",
   "game_created_playerList": "Список игроков",
   "game_created_roles": "Роли:",
   "game_created_gameEndConditions": "Условия окончания игры:",
+  "game_created_button_join": "Присоединиться",
+  "game_created_button_start": "ㅤㅤНачатьㅤㅤ",
+  "game_created_button_cancel": "ㅤОтменитьㅤ",
+  "game_created_button_leave": "ㅤㅤПокинутьㅤㅤ",
+  "game_created_button_edit": "ㅤИзменитьㅤ",
+  "game_created_button_new": "Создать новую игру",
   "cancel_content_message": "Игра была отменена организатором!",
   "cancel_confirm_message": "Игра была убрана!",
   "auto_cancel_content_message": "Игра была автоматически отменена!",
@@ -65,9 +66,9 @@
   "role_embed_placeHolder_name": "Плейсхолдер для меню действия",
   "role_embed_delay_name": "Задержка между действиями",
   "condition_embed_condition_name": "Условие",
-  "condition_embed_embedTitle_name": "Embed Title",
-  "condition_embed_embedDescription_name": "Embed Description",
-  "condition_embed_winRole_name": "Win Role",
+  "condition_embed_embedTitle_name": "Заголовок",
+  "condition_embed_embedDescription_name": "Описание",
+  "condition_embed_winRole_name": "Роль, которая побеждает",
 
   "role_mafia_name": "Мафия",
   "role_mafia_placeHolder": "Выберите жертву...",
