--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -1,16 +1,17 @@
 {
   "game_created": "Гру створено",
   "create_error": "Ви вже створили одну гру, спочатку скасуйте її або дочекайтесь автоскасування!",
-  "create_button_join": "Приєднатися",
-  "create_button_start": "Почати",
-  "create_button_cancel": "Скасувати",
-  "create_button_leave": "Покинути",
-  "create_button_new": "Створити нову гру",
   "game_created_autocancel": "Автоскасування",
   "game_created_gameOwner": "Власник гри",
   "game_created_playerList": "Список гравців",
   "game_created_roles": "Ролі:",
   "game_created_gameEndConditions": "Умови завершення гри:",
+  "game_created_button_join": "ㅤПриєднатися",
+  "game_created_button_start": "ㅤㅤПочатиㅤㅤ",
+  "game_created_button_cancel": "ㅤСкасуватиㅤ",
+  "game_created_button_leave": "ㅤㅤЗалишитиㅤ",
+  "game_created_button_edit": "ㅤЗмінитиㅤ",
+  "game_created_button_new": "Створити нову гру",
   "cancel_content_message": "Гру скасовано організатором!",
   "cancel_confirm_message": "Гру скасовано!",
   "auto_cancel_content_message": "Гру було автоматично скасовано!",
@@ -65,9 +66,9 @@
   "role_embed_placeHolder_name": "Плейсхолдер для меню дії",
   "role_embed_delay_name": "Затримка між діями",
   "condition_embed_condition_name": "Умова",
-  "condition_embed_embedTitle_name": "Embed Title",
-  "condition_embed_embedDescription_name": "Embed Description",
-  "condition_embed_winRole_name": "Win Role",
+  "condition_embed_embedTitle_name": "Заголовок",
+  "condition_embed_embedDescription_name": "Опис",
+  "condition_embed_winRole_name": "Роль, що перемагає",
 
   "role_mafia_name": "Мафія",
   "role_mafia_placeHolder": "Оберіть жертву...",
