interaction defer reply

--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -84,7 +84,9 @@
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Выберите, кого хотите проверить...",
   "role_police_description": "%Вы расследуете преступления в городе! :mag:\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
-
+  "role_mistress_name": "Денис сделай пж",
+  "role_mistress_placeHolder": "Денис сделай пж",
+  "role_mistress_description": "Денис сделай пж",
 
   "profile_title": "Ваш профиль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Аккаунт в «Мафии» с:",
