--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -84,7 +84,9 @@
   "role_police_name": "Детектив",
   "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
   "role_police_description": "%Ви розслідуєте злочини в місті! :mag:\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
-
+  "role_mistress_name": "Денис сделай пж",
+  "role_mistress_placeHolder": "Денис сделай пж",
+  "role_mistress_description": "Денис сделай пж",
 
   "profile_title": "Ваш профіль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Акаунт у «Мафії» з:",
