--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -84,7 +84,9 @@
   "role_police_name": "Detective",
   "role_police_placeHolder": "Choose who you want to check...",
   "role_police_description": "%You investigate crimes in the city! :mag:\nEvery night you check one player and find out if he or she belongs to the mafia.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
-
+  "role_mistress_name": "Денис сделай пж",
+  "role_mistress_placeHolder": "Денис сделай пж",
+  "role_mistress_description": "Денис сделай пж",
 
   "profile_title": "Your profile :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Mafia account since:",
