--- a/src/langs/en.json
+++ b/src/langs/en.json
@@ -58,21 +58,10 @@
   "no_kills_title": "Nobody died!",
   "no_kills_description": "Nobody was killed last night! Perhaps you should thank the doctor?\uD83D\uDE2F",
 
-  "role_embed_action_name": "Action",
-  "role_embed_groupDec_name": "Does play in a group?",
-  "role_embed_spawnFrom_name": "Minimal number of players to spawn",
-  "role_embed_selfSelectable_name": "Is self selectable?",
-  "role_embed_count_name": "Count",
-  "role_embed_placeHolder_name": "Placeholder for action menu",
-  "role_embed_delay_name": "Delay between actions",
-  "condition_embed_condition_name": "Condition",
-  "condition_embed_embedTitle_name": "Title",
-  "condition_embed_embedDescription_name": "Description",
-  "condition_embed_winRole_name": "Winning Role",
-
+  "vote_select": "Choose who you want to vote against...",
   "role_mafia_name": "Mafia",
   "role_mafia_placeHolder": "Choose your victim...",
-  "role_mafia_description": "%KILL AND SURVIVE! :skull_crossbones:\nEvery night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\nThe mafia wins if it is at least half of all active players. Exception: if there are two players left — a mafia member and the maniac — the maniac wins.\nYour teammates: % + %{oPlayersTRole}%",
+  "role_mafia_description": "%KILL AND SURVIVE! :skull_crossbones:\nEvery night the mafia kills one player for whom its members give the most votes (in case of a tie the player is chosen at random). But remember: the victim may be cured by the doctor.\nThe mafia wins if it is at least half of all active players.% + ({r:maniac:count} > 0 ? % Exception: if there are two players left — a mafia member and the maniac — the maniac wins.% : %%) + ({r:mafia:count} > 1 ? %\nYour teammates: % + %{oPlayersTRole}% : %%)",
   "role_killer_name": "Maniac",
   "role_killer_placeHolder": "Choose your victim...",
   "role_killer_description": "%KILL EVERYONE AND SURVIVE! :axe:\nOnce every two nights you kill any player you want. But remember: the victim may be cured by the doctor.\nYou win if no more than one player besides you remains in the city. Spare nobody!%",
@@ -84,9 +73,31 @@
   "role_police_name": "Detective",
   "role_police_placeHolder": "Choose who you want to check...",
   "role_police_description": "%You investigate crimes in the city! :mag:\nEvery night you check one player and find out if he or she belongs to the mafia.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!%",
-  "role_mistress_name": "Денис сделай пж",
-  "role_mistress_placeHolder": "Денис сделай пж",
-  "role_mistress_description": "Денис сделай пж",
+  "role_mistress_name": "Fancy woman",
+  "role_mistress_placeHolder": "Choose who you want to visit...",
+  "role_mistress_description": "You bring love to this world! And what is love — who knows... :kiss:\nEvery night you visit one of the players. The next day, this player can't be voted out.\nYou win with the innocents if there are no murderers left in the city. Be careful: if the mafia is at least half of all active players, they take over the city and win!",
+
+  "condition_mafiaWin_name": "Mafia victory condition",
+  "condition_mafiaWin_WinEmbedTitle": "The mafia has won!",
+  "condition_mafiaWin_WinEmbedDescription": "The mafia has taken over the city — the law is defeated.",
+  "condition_killerWin_name": "Maniac victory condition",
+  "condition_killerWin_WinEmbedTitle": "The maniac has won!",
+  "condition_killerWin_WinEmbedDescription": "The maniac has won — the whole city is cut out.",
+  "condition_peacefulWin_name": "Innocent victory condition",
+  "condition_peacefulWin_WinEmbedTitle": "The innocents have won!",
+  "condition_peacefulWin_WinEmbedDescription": "The innocents have won — there are no criminals left in the city.",
+
+  "role_embed_action_name": "Action",
+  "role_embed_groupDec_name": "Does play in a group?",
+  "role_embed_spawnFrom_name": "Minimal number of players to spawn",
+  "role_embed_selfSelectable_name": "Is self selectable?",
+  "role_embed_count_name": "Count",
+  "role_embed_placeHolder_name": "Placeholder for action menu",
+  "role_embed_delay_name": "Delay between actions",
+  "condition_embed_condition_name": "Condition",
+  "condition_embed_embedTitle_name": "Title",
+  "condition_embed_embedDescription_name": "Description",
+  "condition_embed_winRole_name": "Winning Role",
 
   "profile_title": "Your profile :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Mafia account since:",
@@ -105,13 +116,13 @@
   "create_condition_conditionName_placeHolder": "My mafia victory condition",
   "create_condition_title2": "Condition Creation: ",
   "create_condition_condition_label": "Condition",
-  "create_condition_condition_placeHolder": "string",
-  "create_condition_embedTitle_label": "string",
-  "create_condition_embedTitle_placeHolder": "string",
-  "create_condition_embedDescription_label": "string",
-  "create_condition_embedDescription_placeHolder": "string",
-  "create_condition_embedThumbnail_label": "string",
-  "create_condition_embedThumbnail_placeHolder": "string",
-  "create_condition_winRole_label": "string",
-  "create_condition_winRole_placeHolder": "string"
+  "create_condition_condition_placeHolder": "your condition; for more information see _/help -> Scripting_",
+  "create_condition_embedTitle_label": "Title",
+  "create_condition_embedTitle_placeHolder": "Mafia wins ;)",
+  "create_condition_embedDescription_label": "Description",
+  "create_condition_embedDescription_placeHolder": "Mysteriously the mafia has won...",
+  "create_condition_embedThumbnail_label": "Thumbnail",
+  "create_condition_embedThumbnail_placeHolder": "crazy kitty image link",
+  "create_condition_winRole_label": "Winning Role",
+  "create_condition_winRole_placeHolder": "just a winning role name"
 }
