--- a/src/langs/ru.json
+++ b/src/langs/ru.json
@@ -58,6 +58,35 @@
   "no_kills_title": "Никто не погиб!",
   "no_kills_description": "За минувшую ночь никого не убили! Возможно, стоит отблагодарить доктора?\uD83D\uDE2F",
 
+  "vote_select": "Выберите, против кого хотите проголосовать...",
+  "role_mafia_name": "Мафия",
+  "role_mafia_placeHolder": "Выберите жертву...",
+  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! :skull_crossbones:\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков.% + ({r:maniac:count} > 0 ? % Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк..% : %%) + ({r:mafia:count} > 1 ? %\nС вами в команде: % + %{oPlayersTRole}% : %%)",
+  "role_killer_name": "Маньяк",
+  "role_killer_placeHolder": "Выберите жертву...",
+  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! :axe:\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
+  "role_peaceful_name": "Мирный",
+  "role_peaceful_description": "%Ваша цель — защитить город от преступников! :dove:\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_doctor_name": "Доктор",
+  "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
+  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_police_name": "Детектив",
+  "role_police_placeHolder": "Выберите, кого хотите проверить...",
+  "role_police_description": "%Вы расследуете преступления в городе! :mag:\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+  "role_mistress_name": "Ночная бабочка",
+  "role_mistress_placeHolder": "Выберите, к кому хотите наведаться...",
+  "role_mistress_description": "%Вы несёте любовь в этот мир! А что есть любовь — кто знает... :kiss:\nКаждую ночь вы наведываетесь к одному из игроков. На следующий день этот игрок не может быть изгнан голосованием.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
+
+  "condition_mafiaWin_name": "Условие победы мафии",
+  "condition_mafiaWin_WinEmbedTitle": "Мафия победила!",
+  "condition_mafiaWin_WinEmbedDescription": "Мафия захватила город — закон повержен.",
+  "condition_killerWin_name": "Условие победы маньяка",
+  "condition_killerWin_WinEmbedTitle": "Маньяк победил!",
+  "condition_killerWin_WinEmbedDescription": "Маньяк победил — весь город вырезан.",
+  "condition_peacefulWin_name": "Условие победы мирных",
+  "condition_peacefulWin_WinEmbedTitle": "Мирные победили!",
+  "condition_peacefulWin_WinEmbedDescription": "Мирные победили — преступников в городе не осталось.",
+
   "role_embed_action_name": "Действие",
   "role_embed_groupDec_name": "Играет в группе?",
   "role_embed_spawnFrom_name": "Минимальное количество игроков для появления",
@@ -70,24 +99,6 @@
   "condition_embed_embedDescription_name": "Описание",
   "condition_embed_winRole_name": "Роль, которая побеждает",
 
-  "role_mafia_name": "Мафия",
-  "role_mafia_placeHolder": "Выберите жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ И ВЫЖИВИТЕ! :skull_crossbones:\nКаждую ночь мафия убивает одного игрока, за которого её члены отдают наибольшее число голосов (в случае равенства игрок выбирается случайным образом). Но помните: жертву может вылечить доктор.\nМафия побеждает, если составляет не менее половины всех активных игроков. Исключение: если осталось двое игроков — представитель мафии и маньяк — побеждает маньяк.\nС вами в команде: % + %{oPlayersTRole}%",
-  "role_killer_name": "Маньяк",
-  "role_killer_placeHolder": "Выберите жертву...",
-  "role_killer_description": "%УБЕЙТЕ ВСЕХ И ВЫЖИВИТЕ! :axe:\nРаз в две ночи вы убиваете любого игрока, которого захотите. Но помните: жертву может вылечить доктор.\nВы побеждаете, если кроме вас в городе остаётся не более одного игрока. Не щадите никого!%",
-  "role_peaceful_name": "Мирный",
-  "role_peaceful_description": "%Ваша цель — защитить город от преступников! :dove:\nРаскройте личности злодеев и добейтесь их изгнания из города.\nМирные побеждают, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
-  "role_doctor_name": "Доктор",
-  "role_doctor_placeHolder": "Выберите, кого хотите вылечить...",
-  "role_doctor_description": "%Вы спасаете жизни людей! :heart:\nКаждую ночь вы лечите одного игрока. Если этого игрока выбрали преступники, он не пострадает.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
-  "role_police_name": "Детектив",
-  "role_police_placeHolder": "Выберите, кого хотите проверить...",
-  "role_police_description": "%Вы расследуете преступления в городе! :mag:\nКаждую ночь вы проверяете одного игрока и выясняете, принадлежит ли он к мафии.\nВы побеждаете вместе с мирными, если в городе не остаётся убийц. Будьте осторожны: если мафия составляет хотя бы половину активных игроков, она захватывает город и выигрывает!%",
-  "role_mistress_name": "Денис сделай пж",
-  "role_mistress_placeHolder": "Денис сделай пж",
-  "role_mistress_description": "Денис сделай пж",
-
   "profile_title": "Ваш профиль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Аккаунт в «Мафии» с:",
   "profile_accountSince": "Аккаунт с:",
@@ -98,5 +109,20 @@
   "profile_premium_notPurchased": "не приобретён",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомизация",
-  "profile_button_news": "Уведомления о новостях"
+  "profile_button_news": "Уведомления о новостях",
+
+  "create_condition_title1": "Создание условия",
+  "create_condition_conditionName_label": "Название",
+  "create_condition_conditionName_placeHolder": "Моё условие победы мафии",
+  "create_condition_title2": "Создание условия: ",
+  "create_condition_condition_label": "Условие",
+  "create_condition_condition_placeHolder": "ваше условие; дополнительная информация в _/help -> Scripting_",
+  "create_condition_embedTitle_label": "Заголовок",
+  "create_condition_embedTitle_placeHolder": "Побеждает мафия ;)",
+  "create_condition_embedDescription_label": "Описание",
+  "create_condition_embedDescription_placeHolder": "Загадочным образом мафия победила...",
+  "create_condition_embedThumbnail_label": "Миниатюра",
+  "create_condition_embedThumbnail_placeHolder": "ссылка на изображение с умопомрачительным котёнком",
+  "create_condition_winRole_label": "Роль, которая побеждает",
+  "create_condition_winRole_placeHolder": "просто название роли, которая побеждает"
 }
