--- a/src/langs/ua.json
+++ b/src/langs/ua.json
@@ -58,6 +58,35 @@
   "no_kills_title": "Ніхто не загинув!",
   "no_kills_description": "Минулої ночі нікого не вбили! Може, варто подякувати лікарю?\uD83D\uDE2F",
 
+  "vote_select": "Оберіть, проти кого хочете проголосувати...",
+  "role_mafia_name": "Мафія",
+  "role_mafia_placeHolder": "Оберіть жертву...",
+  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! :skull_crossbones:\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців.% + ({r:maniac:count} > 0 ? % Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.% : %%) + ({r:mafia:count} > 1 ? %\nЗ вами в команді: % + %{oPlayersTRole}% : %%)",
+  "role_killer_name": "Маніяк",
+  "role_killer_placeHolder": "Оберіть жертву...",
+  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! :axe:\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
+  "role_peaceful_name": "Мирний",
+  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! :dove:\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_doctor_name": "Доктор",
+  "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
+  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_police_name": "Детектив",
+  "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
+  "role_police_description": "%Ви розслідуєте злочини в місті! :mag:\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
+  "role_mistress_name": "Повія",
+  "role_mistress_placeHolder": "Оберіть, до кого хочете навідатися...",
+  "role_mistress_description": "Ви несете любов у цей світ! А що є любов - хто знає... :kiss:\nЩоночі ви навідуєтеся до одного з гравців. Наступного дня цей гравець не може бути вигнаний голосуванням.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!",
+
+  "condition_mafiaWin_name": "Умова перемоги мафії",
+  "condition_mafiaWin_WinEmbedTitle": "Мафія перемогла!",
+  "condition_mafiaWin_WinEmbedDescription": "Мафія захопила місто — закон повалено.",
+  "condition_killerWin_name": "Умова перемоги маніяка",
+  "condition_killerWin_WinEmbedTitle": "Маніяк переміг!",
+  "condition_killerWin_WinEmbedDescription": "Маніяк переміг — усе місто вирізано.",
+  "condition_peacefulWin_name": "Умова перемоги мирних",
+  "condition_peacefulWin_WinEmbedTitle": "Мирні перемогли!",
+  "condition_peacefulWin_WinEmbedDescription": "Мирні перемогли — злочинців у місті не лишилося.",
+
   "role_embed_action_name": "Дія",
   "role_embed_groupDec_name": "Чи грає в групі?",
   "role_embed_spawnFrom_name": "Мінімальна кількість гравців для появи",
@@ -70,24 +99,6 @@
   "condition_embed_embedDescription_name": "Опис",
   "condition_embed_winRole_name": "Роль, що перемагає",
 
-  "role_mafia_name": "Мафія",
-  "role_mafia_placeHolder": "Оберіть жертву...",
-  "role_mafia_description": "%УБИВАЙТЕ ТА ВИЖИВІТЬ! :skull_crossbones:\nЩоночі мафія вбиває одного гравця, за якого її члени віддають найбільше голосів (у разі рівної кількості гравець обирається випадко). Але пам'ятайте: жертву може вилікувати доктор.\nМафія перемагає, якщо складає не менше половини всіх активних гравців. Виняток: якщо залишилося двоє гравців — представник мафії та маніяк — перемагає маніяк.\nЗ вами в команді: % + %{oPlayersTRole}%",
-  "role_killer_name": "Маніяк",
-  "role_killer_placeHolder": "Оберіть жертву...",
-  "role_killer_description": "%УБИЙТЕ ВСІХ І ВИЖИВІТЬ! :axe:\nРаз на дві ночі ви вбиваєте будь-якого гравця, якого забажаєте. Але пам'ятайте: жертву може вилікувати доктор.\nВи перемагаєте, якщо крім вас у місті залишається не більше одного гравця. Не жалійте нікого!%",
-  "role_peaceful_name": "Мирний",
-  "role_peaceful_description": "%Ваша мета — захистити місто від злочинців! :dove:\nРозкрийте особи злодіїв і зробіть усе, щоб їх вигнали з міста.\nМирні перемагають, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
-  "role_doctor_name": "Доктор",
-  "role_doctor_placeHolder": "Оберіть, кого хочете вилікувати...",
-  "role_doctor_description": "%Ви рятуєте життя людей! :heart:\nЩоночі ви лікуєте одного гравця. Якщо цього гравця обрали злочинці, він не постраждає.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
-  "role_police_name": "Детектив",
-  "role_police_placeHolder": "Оберіть, кого хочете перевірити...",
-  "role_police_description": "%Ви розслідуєте злочини в місті! :mag:\nЩоночі ви перевіряєте одного гравця та з'ясовуєте, чи належить він до мафії.\nВи перемагаєте разом із мирними, якщо в місті не залишається вбивць. Будьте обережні: якщо мафія складає хоча б половину активних гравців, вона захоплює місто та виграє!%",
-  "role_mistress_name": "Денис сделай пж",
-  "role_mistress_placeHolder": "Денис сделай пж",
-  "role_mistress_description": "Денис сделай пж",
-
   "profile_title": "Ваш профіль :bust_in_silhouette:",
   "profile_mafiaAccountSince": "Акаунт у «Мафії» з:",
   "profile_accountSince": "Акаунт з:",
@@ -98,5 +109,20 @@
   "profile_premium_notPurchased": "не придбано",
   "profile_button_premium": "Premium",
   "profile_button_custom": "Кастомізація",
-  "profile_button_news": "Повідомлення про новини"
+  "profile_button_news": "Повідомлення про новини",
+
+  "create_condition_title1": "Створення умови",
+  "create_condition_conditionName_label": "Назва",
+  "create_condition_conditionName_placeHolder": "Моя умова перемоги мафії",
+  "create_condition_title2": "Створення умови: ",
+  "create_condition_condition_label": "Умова",
+  "create_condition_condition_placeHolder": "ваша умова, додаткова інформація в _/help -> Scripting_",
+  "create_condition_embedTitle_label": "Заголовок",
+  "create_condition_embedTitle_placeHolder": "Перемагає мафія ;)",
+  "create_condition_embedDescription_label": "Опис",
+  "create_condition_embedDescription_placeHolder": "Із загадкових причин мафія перемагає...",
+  "create_condition_embedThumbnail_label": "Мініатюра",
+  "create_condition_embedThumbnail_placeHolder": "посилання на зображення з неймовірним кошеням",
+  "create_condition_winRole_label": "Роль, що перемагає",
+  "create_condition_winRole_placeHolder": "просто назва ролі, що перемагає"
 }
